--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 	"devDependencies": {
 		"eslint": "^3.3.1",
 		"eslint-find-rules": "^1.10.0",
-		"eslint-plugin-import": "^1.14.0"
+		"eslint-plugin-import": "^1.14.0",
+		"eslint-plugin-jsx-a11y": "^2.2.0",
+		"eslint-plugin-react": "^6.1.2"
 	},
 	"peerDependencies": {
 		"eslint": "^3.3.1",
 		"eslint-plugin-import": "^1.14.0",
-		"eslint-plugin-jsx-a11y": "^2.1.0",
+		"eslint-plugin-jsx-a11y": "^2.2.0",
 		"eslint-plugin-react": "^6.1.2"
 	}
 }
