--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-norigin",
-  "version": "2.2.0",
+  "version": "3.0.0-rc.1",
   "description": "NoriginMedia base JS ESLint config",
   "main": "index.js",
   "scripts": {
