--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "homepage": "https://github.com/NoriginMedia/eslint-config-norigin",
   "dependencies": {
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-react-native": "^3.1.0"
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react-native": "3.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.13.0",
-    "eslint-find-rules": "^3.1.1"
+    "eslint": "4.19.1",
+    "eslint-find-rules": "3.1.1"
   },
   "peerDependencies": {
-    "eslint": "^4.13.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-react-native": "^3.1.0"
+    "eslint": "4.19.1",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-react-native": "3.2.1"
   }
 }
