--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-native": "^3.7.0"
+    "eslint-plugin-react-native": "^3.7.0",
+    "eslint-plugin-react-hooks": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "4.19.1",
